--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -45,9 +45,11 @@
 
 				</div>
 			</div>
+
 			<div class="layui-side layui-bg-black" id="admin-side">
 				<div class="layui-side-scroll" id="admin-navbar-side" lay-filter="side"></div>
 			</div>
+
 			<div class="layui-body" style="bottom: 0;border-left: solid 2px #1AA094;" id="admin-body">
 				<div class="layui-tab admin-nav-card layui-tab-brief" lay-filter="admin-tab">
 					<ul class="layui-tab-title">
@@ -65,8 +67,8 @@
 			</div>
 			<div class="layui-footer footer footer-demo" id="admin-footer">
 				<div class="layui-main">
-					<p>2016 &copy;
-						<a href="http://localhost:3000/">江西车协官网后台管理系统</a> LGPL license
+					<p>2018 &copy;
+						<a href="http://localhost:3000/">Hospital后台管理系统</a> LGPL license
 					</p>
 				</div>
 			</div>
