--- a/views/admin/login.html
+++ b/views/admin/login.html
@@ -106,8 +106,8 @@
 							layer.alert('用户不存在', {icon: 2});
 						}else if(result.status==="password error"){
 							layer.alert('密码错误', {icon: 2});
-						}else if(result.status==="unchecked"){
-							layer.alert('还未被授权，可提醒高级管理员授权。', {icon: 2});
+						// }else if(result.status==="unchecked"){
+						// 	layer.alert('还未被授权，可提醒高级管理员授权。', {icon: 2});
 						}else{
 							layer.msg('登陆成功');
 							//jquery实现页面跳转
