--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -23,7 +23,7 @@
 			<div class="layui-header header header-demo">
 				<div class="layui-main">
 					<div class="admin-login-box">
-						<a class="logo" style="left: 0;" href="http://beginner.zhengjinfan.cn/demo/beginner_admin/">
+						<a class="logo" style="left: 0;" href="http://localhost:3000/login/">
 							<span style="font-size: 22px;">后台管理</span>
 						</a>
 						<div class="admin-side-toggle">
