--- a/views/website/human_resources/recruit.html
+++ b/views/website/human_resources/recruit.html
@@ -94,7 +94,7 @@
                 //显示分页
                 laypage({
                     cont: 'page', //容器。值支持id名、原生dom对象，jquery对象。【如该容器为】：<div id="page1"></div>
-                    pages: result.pages, //通过后台拿到的总页数
+                    pages: result.totalPage, //通过后台拿到的总页数
                     curr: curr || 1, //当前页
                     skin: '#c52d2f',
                     jump: function(obj, first){ //触发分页后的回调
